Speed up of index range queries.